fixed bugs on mobile

--- a/2021/06/flowers/css/media.scss
+++ b/2021/06/flowers/css/media.scss
@@ -1,3 +1,8 @@
+@media(max-width: 1720px) {
+    .info-image {
+        width: 100%;
+    }
+}
 @media(max-width: 1420px) {
     .info-body {
         align-items: center;
