--- a/2021/06/flowers/css/style.scss
+++ b/2021/06/flowers/css/style.scss
@@ -443,7 +443,7 @@ h2 {
             background-position: center;
             background-image: url(../img/special-decor-thue.png);
             position: absolute;
-            right: -54px;
+            right: 0;
             bottom: 93px;
             z-index: -1;
         }
@@ -456,7 +456,7 @@ h2 {
         font-size: 14px;
         font-family: $mont-regular;
         line-height: 1.4;
-        margin: 0 -20px;
+        margin: 0 -15px;
         display: flex;
     }
     &-item {
@@ -540,7 +540,7 @@ h2 {
         background-repeat: no-repeat;
         background-image: url(../img/cats-decor.png);
         position: absolute;
-        right: -65px;
+        right: 0;
         left: auto;
         top: -158px;
         z-index: -1;
